--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -9,6 +9,7 @@
 
     <script src="/js/main.js"></script>
     <script src="/yote/js/yote.js"></script>
+    <script src="/yote/js/yote.util.js"></script>
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -481,6 +482,10 @@ my $from_ip =       $env-&gt;{ REMOTE_ADDR };\n\
 	} //show_lesson
 
 	show_lesson( 0 );
+	attach_login( {
+	    attachpoint         : '#logged_in_status',
+	    message_attachpoint : '#msg_div' 
+	} );
     });
     </script>
   </head>
@@ -489,9 +494,10 @@ my $from_ip =       $env-&gt;{ REMOTE_ADDR };\n\
 
     <DIV class="header">
 	<img src="yotelogo.png">
-	<UL id="top_nav" class="nav"/>
+	<UL id="top_nav" class="nav"></UL>
+        <DIV class="login logged_in" id="logged_in_status"></DIV>
+        <DIV id="msg_div"></DIV>
     </DIV>
-
     <SECTION>
       <h1>Quickstart</h1>
       <p>These excersizes are designed to show one concept at a time in order to learn the ins and outs of programming Yote. For the server side examples, the package is expected to be in the classpath used by Yote. For the client side examples, the appropriate javascript files are expected to be included. <BR>
