updated samples html page

--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -15,9 +15,9 @@
 
     <STYLE>
       .widget    { background-color: rgba( 255,255,255,.2 ); margin-bottom: 10px; padding:5px; }
-      .c_name    { font-style: italic }
+      .c_name    { font-style: italic; font-family: sans-serif; font-size: large; }
       .c_time    { font-family: monospace; text-size: smaller; }
-      .c_message { }
+      .c_message { font-family: serif; }
       .motd      { padding : 5px; margin : 5px; border solid 1 px black }
       body       { margin-top:70px }
       .page_panel { width : 800px; background-color: rgb(79, 153, 88); margin: auto; }
